compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__integration_test8.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 288
expression: "pub fn x() { 1. <. 2.3 }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn x() { 1. <. 2.3 }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([x/0]).

-file("project/test/my/mod.gleam", 1).
-spec x() -> boolean().
x() ->
    1.0 < 2.3.
