compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__integration_test9.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 294
expression: "pub type Pair(x, y) { Pair(x: x, y: y) } pub fn x() { Pair(1, 2) Pair(3., 4.) }"
snapshot_kind: text
---
----- SOURCE CODE
pub type Pair(x, y) { Pair(x: x, y: y) } pub fn x() { Pair(1, 2) Pair(3., 4.) }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([x/0]).
-export_type([pair/2]).

-type pair(I, J) :: {pair, I, J}.

-file("project/test/my/mod.gleam", 1).
-spec x() -> pair(float(), float()).
x() ->
    {pair, 1, 2},
    {pair, 3.0, 4.0}.
