compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__keyword_constructors1.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 560
expression: "pub type X { Fun(Int) }"
snapshot_kind: text
---
----- SOURCE CODE
pub type X { Fun(Int) }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export_type([x/0]).

-type x() :: {'fun', integer()}.
