compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__negation.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 589
expression: "pub fn negate(x) {\n  !x\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn negate(x) {
  !x
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([negate/1]).

-file("project/test/my/mod.gleam", 1).
-spec negate(boolean()) -> boolean().
negate(X) ->
    not X.
