compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__positive_zero.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 685
expression: "\npub fn main() {\n  0.0\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  0.0
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> float().
main() ->
    +0.0.
