compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__recursive_type.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 504
expression: "\nfn id(x) {\n  x\n}\n\npub fn main() {\n  id(id)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn id(x) {
  x
}

pub fn main() {
  id(id)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec id(I) -> I.
id(X) ->
    X.

-file("project/test/my/mod.gleam", 6).
-spec main() -> fun((M) -> M).
main() ->
    id(fun id/1).
